--- a/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
+++ b/Lab_Management.v1/src/main/resources/templates/booking/my-booking.html
@@ -22,7 +22,7 @@
             <div class="col-12">
                 <form action="#" >
                     <div class="choose-room d-flex justify-content-around align-content-center">
-                        <div class="col-3" th:each="booking : ${bookingDTOs}" style="border-radius:1em 1em 65px 65px">
+                        <div class="col-3 room" th:each="booking : ${bookingDTOs}" style="border-radius:1em 1em 65px 65px">
                             <div class="card lab-card" style="border-radius:50px" >
                                 <div>
                                     <style>
