--- a/Lab_Management.v1/src/main/resources/templates/index.html
+++ b/Lab_Management.v1/src/main/resources/templates/index.html
@@ -21,14 +21,17 @@
             <div class="col-12">
                 <form action="#" >
                     <div class="form-group choose-datetime">
-                        <!--<div class="form-control div-icon" style="margin: auto">
+                        <!--<div class="form-control div-icon div-icon-pre" id="div-icon-pre" style="margin: auto; cursor: pointer">
                             <i class="fa fa-angle-double-left"></i>
                         </div>-->
+                        <div class="form-control" id="div-icon-home" style="margin: auto;cursor: pointer">
+                            <i class="fa fa-calendar"></i>
+                        </div>
                         <label for="date" style="color: black; padding: 10px; font-weight: bold;font-size: 2em;">Chọn ngày:</label>
                         <input type="date" id="date" class="form-control" style="max-width: 20em">
-                        <!--<div class="form-control" style="margin: auto">
+                        <div class="form-control div-icon div-icon-next" style="margin: auto; cursor: pointer">
                             <i class="fa fa-angle-double-right "></i>
-                        </div>-->
+                        </div>
                     </div>
                     <div class="alert bg-danger-subtle" id="next-day">
                         <div style="margin: auto" class="alert bg-danger-subtle">
@@ -37,7 +40,7 @@
                     </div>
                     <!--<button type="submit" class="btn btn-primary">Đặt lịch</button>-->
                     <div class="choose-room d-flex justify-content-around align-content-center">
-                        <div class="col-3" th:each="lab : ${labDTOS}" style="border-radius:1em 1em 65px 65px">
+                        <div class="col-3 room" th:each="lab : ${labDTOS}" style="border-radius:1em 1em 65px 65px">
                             <div class="card lab-card" style="border-radius:50px" >
                                 <div style="background-color: #007bff">
                                     <div class="card-header justify-content-center" th:text="${lab.getLabName}"></div>
@@ -91,8 +94,12 @@
         var username = [[${#authentication.name}]];
         var dateAndStatusLabsList = [[${dateAndStatusLabsList}]];
         var currentDate = [[${currentDate}]];
-        Nextday(currentDate);
         setIndex(username,dateAndStatusLabsList, currentDate);
+        Setday($('#next-day'), currentDate, true);
+
+        checkdateForDivPre(currentDate);
+        // Setday($('.div-icon-next'), $("#date").val(), true);
+        // Setday($('.div-icon-pre'), $("#date").val(), false);
         /**
          * đặt $('.alert-link').click ở sau setIndex thì mới chạy
          * */
