--- a/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/Dashboard.html
@@ -1,12 +1,210 @@
+<!--
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Dashboard Quản lý Phòng Thí nghiệm</title>
+
 </head>
 <body>
 <dashboard>
 
+</dashboard>
+</body>
+</html>-->
+<!DOCTYPE html>
+<html lang="vi" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thyme leaf-extras-springsecurity5">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard Quản lý Khai thác Phòng thí nghiệm</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+<dashboard>
+    <div class="col-lg-12 col-xl-12">
+        <div class="main-card mb-3 card">
+        <div style="margin: auto;">
+            <h3 class="p-2 " >YÊU CẦU ĐẶT PHÒNG</h3>
+        </div>
+            <div class="grid-menu grid-menu-3col">
+                <div class="no-gutters row">
+                    <div class="col-sm-4" id="Approve">
+                            <div class="widget-chart widget-chart-hover br-br d-flex flex-row justify-content-center align-content-center">
+                                <div class="icon-wrapper rounded-circle">
+                                    <div class="icon-wrapper-bg bg-success"></div>
+                                    <i class="fa fa-check"></i>
+                                </div>
+                                <div class="widget-numbers font-size-xlg" >
+                                    <pre class="text-primary my-4" th:text="''"></pre>
+                                    <p class="text-primary my-4" th:text="'Đã xử lý: ' + ${bookingAPPROVE}"></p>
+                                    <pre class="text-primary my-4" th:text="''"></pre>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-sm-4" id="Pendding">
+                        <div class="widget-chart widget-chart-hover br-br">
+                            <div class="font-icon-wrapper float-left mr-3 mb-3 ">
+                                <div class="loader-wrapper d-flex justify-content-center align-items-center ">
+                                    <div class="loader">
+                                        <div class="ball-spin-fade-loader">
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                            <div class="bg-warning"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-primary my-4" th:text="'Chờ xử lý: ' + ${bookingPENDDING}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4" id="Cancel">
+                        <div class="widget-chart widget-chart-hover br-br d-flex flex-row justify-content-center align-content-center">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-danger"></div>
+                                <i class="fa fa-times text-danger"></i>
+                            </div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-primary my-4" th:text="'Đơn hủy: ' + ${bookingCANCEL}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-12 col-xl-12">
+        <div class="main-card mb-3 card">
+            <div class="grid-menu grid-menu-2col">
+                <div class="no-gutters row">
+                    <div class="col-sm-6 lab-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="lnr-apartment text-primary"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-primary my-4" th:text="'Số lượng phòng: ' + ${#lists.size(labsOnLine)}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 equi-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-info"></div>
+                                <i class="fa fa-hammer text-info"></i>
+                            </div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-primary my-4" th:text="'Số lượng thiết bị: ' + ${quantityEqui}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 lab-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="lnr-apartment text-success"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <p class="text-success my-4" th:text="'Phòng được đặt hôm nay: ' + ${#lists.size(labsBooking)}"></p>
+                                <p class="my-2">
+                                    <span class="text-success" th:if="${#strings.containsIgnoreCase(comparatorLabComponet.compared, 'Tăng')}" th:text="'So với hôm qua: Tăng ' + ${comparatorLabComponet.quantity}"></span>
+                                    <span class="text-warning" th:if="${#strings.containsIgnoreCase(comparatorLabComponet.compared,'Bằng')}" th:text="'Giữ nguyên so với hôm qua'"></span>
+                                    <span class="text-danger" th:if="${#strings.containsIgnoreCase(comparatorLabComponet.compared,'Giảm')}" th:text="'So với hôm qua: Giảm ' + ${comparatorLabComponet.quantity}"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 equi-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-info"></div>
+                                <i class="fa fa-hammer text-danger"></i>
+                            </div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-danger my-4" th:text="'Đã qua sửa chữa: ' + ${quantityEquiFixed}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-card mb-5 card">
+            <div class="grid-menu grid-menu-2col">
+                <div class="no-gutters row">
+                    <div class="col-sm-6" id="Teacher-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="fa fa-users text-warning"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <p class="text-info my-4" th:text="'Số lượng giáo viên: ' + ${teachers}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-info my-4" th:text="'Số người chịu trách nghiệm: ' + ${reservationist}"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6" id="Manager-management">
+                        <div class="widget-chart widget-chart-hover">
+                            <div class="icon-wrapper rounded-circle">
+                                <div class="icon-wrapper-bg bg-primary"></div>
+                                <i class="fa fa-user-md text-font-family"></i></div>
+                            <div class="widget-numbers font-size-xlg" >
+                                <p class="text-info my-4" th:text="'Số lượng admin: ' + ${admins}"></p>
+                                <pre class="text-primary my-4" th:text="''"></pre>
+                                <p class="text-info my-4" th:text="'Số lượng quản lý: ' + ${managers}"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        $('#Approve').click(function () {
+            window.location.href = "/Lab/admin/LabBookingManagement/Approve";
+        })
+        $('#Pendding').click(function () {
+            window.location.href = "/Lab/admin/LabBookingManagement/Pendding";
+        })
+        $('#Cancel').click(function () {
+            window.location.href = "/Lab/admin/LabBookingManagement/Cancel";
+        })
+        $('.lab-management').click(function () {
+            window.location.href = "/Lab/admin/Room";
+        })
+        $('.equi-management').click(function () {
+            window.location.href = "/Lab/admin/Equipment";
+        })
+        $('#Teacher-management').click(function () {
+            window.location.href = "/Lab/admin/Teacher";
+        })
+        $('#Manager-management').click(function () {
+            window.location.href = "/Lab/admin/Manager";
+        })
+
+    </script>
 </dashboard>
 </body>
 </html>
