lab rankings score is loadding

--- a/Lab_Management.v1/src/main/resources/static/css/experiment.css
+++ b/Lab_Management.v1/src/main/resources/static/css/experiment.css
@@ -47,3 +47,8 @@
         transform: scale(0.5);
     }
 }
+
+
+/**************************************/
+                /*Table*/
+/**************************************/
