--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
@@ -64,7 +64,7 @@
                     box-shadow: -1.5em 0 5px 2px rgba(0, 0, 125, 0.2);
                 }
             </style>
-            <button type="submit" class="btn btn-primary">Sửa</button>
+            <button type="submit" class="btn btn-primary" onclick="return confirm('Bạn có chắc chắn sửa?')">Sửa</button>
         </form>
     </div>
 
