--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
@@ -84,7 +84,7 @@
                     formGroup.insertBefore(div_inputseri, button);
                 }
             </script>
-            <button type="submit" class="btn btn-primary">Thêm</button>
+            <button type="submit" class="btn btn-primary" onclick="return confirm('Bạn có chắc chắn thêm thiết bị này?')">Thêm</button>
         </form>
     </div>
 
