--- a/Lab_Management.v1/src/main/resources/templates/booking/booking-lab.html
+++ b/Lab_Management.v1/src/main/resources/templates/booking/booking-lab.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Phone</title>
+    <title>Chi tiết đặt phòng</title>
     <!-- Link to Bootstrap CSS for styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/base2.min.css">
