--- a/Lab_Management.v1/src/main/resources/templates/admin/booking-detail-admin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/booking-detail-admin.html
@@ -53,7 +53,7 @@
                     <div class="form-group">
                         <label for="experiment_group">Chọn nhóm loại hình thí nghiệm:</label>
                         <select class="form-control bg-danger-subtle" id="experiment_group"
-                                th:value="${bookingDTO.getContentDTO.getExperimentGroup.getId}" name="experiment_group" required>
+                                th:data="${bookingDTO.getContentDTO.getExperimentGroup.getId}" name="experiment_group" required>
                             <option th:each="experimentGroup : ${experimentGroups}" th:value="${experimentGroup.getId}"
                                     th:text="${experimentGroup.getGroupName}"></option>
                         </select>
@@ -61,7 +61,7 @@
                     <div class="form-group">
                         <label for="experiment_type">Chọn loại hình thí nghiệm:</label>
                         <select class="form-control bg-danger-subtle" id="experiment_type"
-                                th:value="${bookingDTO.getContentDTO.getExperimentType.getId}" name="experiment_type" required>
+                                th:data="${bookingDTO.getContentDTO.getExperimentType.getId}" name="experiment_type" required>
                             <option th:each="experimentType : ${experimentTypes}" th:value="${experimentType.getId}"
                                     th:text="${experimentType.getTypeName}"></option>
                         </select>
@@ -69,7 +69,7 @@
                     <div class="form-group">
                         <label for="experiment_report">Chọn loại báo cáo:</label>
                         <select class="form-control bg-danger-subtle" id="experiment_report"
-                                th:value="${bookingDTO.getContentDTO.getExperimentReport.getId}" name="experiment_report" required>
+                                th:data="${bookingDTO.getContentDTO.getExperimentReport.getId}" name="experiment_report" required>
                             <option th:each="experimentReport : ${experimentReports}" th:value="${experimentReport.getId}"
                                     th:text="${experimentReport.getReportType}"></option>
                         </select>
@@ -172,7 +172,7 @@
             </div>
             <!-- Submit button -->
             <div class="row d-flex justify-content-center" th:if="${#strings.contains(#request.requestURI, '/Lab/admin/ShowBookingPendding')}">
-                <button type="submit" class="btn btn-primary col-3 mx-2">Sửa thông tin</button>
+                <button type="submit" class="btn btn-primary col-3 mx-2" onclick="return confirm('Bạn có chắc chắn muốn sửa?')">Sửa thông tin</button>
                 <button type="button" class="btn btn-success col-3 mx-2">Duyệt</button>
                 <button type="button" class="btn btn-danger col-3 mx-2">Hủy</button>
             </div>
@@ -225,26 +225,47 @@
         var bookingId = [[${bookingDTO.getId}]];
         var tempGroupId
         $(document).ready(function() {
+            /** ******* Đặt value cho các select*/
+            setTimeout(function() {
+                $('#experiment_group').val($('#experiment_group').attr('data'));
+                $('#experiment_group').trigger('change')
+                setTimeout(function() {
+                    $('#experiment_type').val($('#experiment_type').attr('data'));
+                    $('#experiment_type').trigger('change')
+                    setTimeout(function() {
+                        $('#experiment_report').val($('#experiment_report').attr('data'));
+                    }, 50);
+                }, 50);
+            }, 50);
+
+            /** ******* Set date **********/
             $('#date').val([[${date}]]);
             $('#experiment_type').prop('disabled','true');
             $('#experiment_report').prop('disabled','true');
 
-            $('#experiment_group').change(function () {
-                var groupId = $(this).val();
-                SetExperiment_Type(groupId);
-                tempGroupId = groupId;
-                $('#experiment_report').prop('disabled','true');
-            });
-            $('#experiment_type').change(function () {
-                var typeId = $(this).val();
-                SetExperiment_Report(tempGroupId, typeId)
-            })
-            $('#experiment_group').trigger('change');
-            $('#experiment_type').trigger('change');
-            $('#experiment_report').trigger('change');
+            if(window.location.pathname === '/Lab/admin/ShowBookingPendding/'+bookingId){
+                $('#experiment_group').change(function () {
+                    var groupId = $(this).val();
+                    SetExperiment_Type(groupId);
+                    tempGroupId = groupId;
+                    $('#experiment_report').prop('disabled','true');
+                });
+                $('#experiment_type').change(function () {
+                    var typeId = $(this).val();
+                    SetExperiment_Report(tempGroupId, typeId)
+                });
+            }
+
+            /** ******* trigger change **********/
+            // setTimeout(function() {
+            //     $('#experiment_group').trigger('change');
+            //     $('#experiment_type').trigger('change');
+            //     $('#experiment_report').trigger('change');
+            // },300)
 
             ReadOnly(bookingId);
-        })
+        });
+
         function SetExperiment_Type(groupId) {
             $('#experiment_type').removeAttr('disabled');
             // Xóa tất cả các option hiện tại trong select experiment_type
@@ -284,11 +305,16 @@
         }
 
         $('.btn-success').click(function () {
-            window.location.href = "/Lab/admin/ShowBookingPendding/Approve?bookingId="+bookingId;
-        })
+            if (confirm('Bạn có chắc chắn muốn duyệt đơn đặt này?')) {
+                window.location.href = "/Lab/admin/ShowBookingPendding/Approve?bookingId=" + bookingId;
+            }
+        });
+
         $('.btn-danger').click(function () {
-            window.location.href = "/Lab/admin/ShowBookingPendding/Cancel?bookingId="+bookingId;
-        })
+            if (confirm('Bạn có chắc chắn muốn hủy đơn này?')) {
+                window.location.href = "/Lab/admin/ShowBookingPendding/Cancel?bookingId=" + bookingId;
+            }
+        });
 
         function ReadOnly(bookingId) {
             // Kiểm tra đường dẫn hiện tại
