--- a/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
@@ -18,36 +18,33 @@
     <h1 style="margin-top: 50px; text-align: center;">Thêm phòng thí nghiệm</h1><br>
     <div class="container">
         <form th:action="@{'/Lab/admin/Room/add'}" method="post" enctype="multipart/form-data">
-            <div>
-                <!-- Input for uploading an image -->
+            <div class="row">
 <!--                <div class="form-group">
                     <label for="image">Image:</label>
                     <input type="file" class="form-control" id="image" name="file" required>
                 </div>-->
-                <!-- Input for Phone Name -->
-                <div class="form-group">
+                <div class="form-group col-6">
                     <label for="LabName">Tên phòng thí nghiệm:</label>
                     <input type="text" class="form-control" id="LabName" name="LabName" required
                            th:placeholder="'P205'">
                 </div>
-                <div class="form-group">
-                    <label for="LabCapacity">Sức chứa:</label>
-                    <input type="text" class="form-control" id="LabCapacity" name="LabCapacity" required
-                           th:placeholder="'60'">
-                </div>
-                <div class="form-group">
-                    <label for="LabLocation">Vị trí:</label>
-                    <input type="text" class="form-control" id="LabLocation" name="LabLocation" required
-                           th:placeholder="'60'">
-                </div>
-                <div class="form-group">
+                <div class="form-group col-6">
                     <label for="Management">Category:</label>
                     <select class="form-control" id="Management" name="Management" required>
                         <option th:each="people : ${peoples}" th:value="${people.getId}"
                                 th:text="${people.getName}"></option>
                     </select>
                 </div>
-                <div class="form-group col-md-6" style="padding: unset">
+                <div class="form-group col-6">
+                    <label for="LabLocation">Vị trí:</label>
+                    <input type="text" class="form-control" id="LabLocation" name="LabLocation" required
+                           th:placeholder="'P206, P207 Khu A'">
+                </div>
+                <div class="form-group col-6">
+                    <label for="LabCapacity">Sức chứa:</label>
+                    <input type="text" class="form-control" id="LabCapacity" name="LabCapacity" required
+                           th:placeholder="'60'">
+                </div>                <div class="form-group col-md-6" style="padding: 2em">
                     <div class="main-card mb-3 card">
                         <div class="card-body">
                             <h5 class="card-title">Chọn thiết bị</h5>
@@ -64,8 +61,9 @@
                         </div>
                     </div>
                 </div>
-
-                <button type="submit" class="btn btn-primary">Thêm</button>
+                <div class="col-6 d-flex">
+                    <button type="submit" class="btn btn-primary" style="margin: auto; padding: 2em">Thêm</button>
+                </div>
             </div>
         </form>
     </div>
